--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "type-check": "tsc --noEmit",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -19,6 +21,8 @@
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.12",
     "axios": "^1.3.5",
+    "canvas-confetti": "^1.6.0",
+    "clippyts": "^1.0.4",
     "clsx": "^1.2.1",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
@@ -32,9 +36,12 @@
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.37",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.6"
+    "prettier-plugin-tailwindcss": "^0.2.6",
+    "typescript": "^5.0.4"
   }
 }
