--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/mdx": "^13.0.2",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
+    "@vercel/analytics": "^0.1.11",
     "autoprefixer": "^10.4.12",
     "axios": "^1.3.5",
     "canvas-confetti": "^1.6.0",
